# PHI

./: .gitignore  ABOUT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  audio_model.json  engine_phi_analysis.csv  engine_ratio_analysis.csv  fractal_phi.json  fractal_phi_engine.json  fractal_ratio.json  fractal_ratio_engine.json  harmonize_phi_backoff.csv  harmonize_phi_split.csv  harmonize_ratio_backoff.csv  harmonize_ratio_split.csv  image_model.json  mandelbrot_analysis.csv  out_scaled.csv  pyproject.toml  recon_phi.csv  recon_phi_engine.csv  recon_ratio_engine.csv  recon_ratio_hold.csv  recon_ratio_interp.csv  requirements.txt  tetra.ply  tetra_recon.ply  three_metrics.csv  three_model.json  tone_analysis.csv  video_metrics.csv  video_model.json
dashboard/: streamlit_app.py
docs/: Consciousness-Roadmap.md  Cookbook.md  PHI-Training-Guide.md  PHI-Training-Plan.md  Phase4-Results-Summary.md  Quickstart.md  Training-1.3B-LLM.md  Use-Cases.md  phi project 2.rtf  phi project.rtf
examples/: example.csv  neuro_metrics_sweep.py  neuro_programmatic.py  phi_complete_demo.py  phi_training_demo.py
experiments/: phi_coupling.py
phi/: __init__.py  ai.py  audio.py  cli.py  constants.py  cosmos.py  engine.py  fractal.py  harmonizer.py  hf_integration.py  image.py  infra.py  mandelbrot.py  multiverse.py  neuro.py  omniverse.py  phi_model_trainer.py  quantum.py  signals.py  three.py  trainer.py  training.py  transforms.py  video.py
scripts/: live_phi_test.py  llm_eval_ppl.py  llm_finetune_lora.py  phi_train_model.py  (+11 more)
(+44 files in other folders)
